tests/diagnostics/cases/types/11_too_many_arguments.home
// Wrong number of arguments: function expects one, three supplied.
fn one(a: i32) {}

fn main() {
    one(1, 2, 3)
}
